# crispr-pipeline

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  requirements.txt  setup_genome.sh
analysis_archive/: guide_analysis.rs  key_diagrams_integration.rs  sankey.rs  tool_evaluation.rs
chopchop/: chopchop.py  chopchop_env_requirements.txt
data/: cegv2.txt
lift_over_to_hg38/: make_hg19_cut_bed.py  merge_lifted_to_hg38.py
scripts/: contribution.py  crispr_prediction_evaluation.py  efficacy_analysis.py  generate_crispr_heatmaps.py  key_diagrams.py  per_gene_auroc_violin.py  plot_bad_guide_summary.py  run_key_diagrams.sh  tool_comparison.py
sequence_retirever/: Cargo.toml
sequence_retirever/src/: main.rs
sequence_retriever/: Cargo.toml
sequence_retriever/src/: api_handler.rs  chopchop_integration.rs  exon_intron.rs  gene_analysis.rs  gene_sequence.rs  main.rs  models.rs  paralogs.rs  protein_domains.rs  regulatory_elements.rs  snps.rs
validator/: Cargo.toml
validator/src/: analysis.rs  chopchop_integration.rs  combination_model.rs  helper_functions.rs  logistic_cv.rs  mageck_processing.rs  main.rs  models.rs  tool_evluation.rs
validator/src/analysis/: efficacy_analysis_integration.rs  gene_balanced.rs  mod.rs  prediction_evaluation.rs  roc.rs  tool_comparison.rs  tool_comparison_integration.rs  tool_evluation.rs  within_gene.rs
validator/src/data_handling/: any_dataset.rs  avana_depmap.rs  cegs.rs  genome_crispr.rs  mod.rs  tko_one.rs
validator/src/prediction_tools/: chopchop_integration.rs  crispor_integration.rs  deepcrispr_integration.rs  deepspcas9_integration.rs  mod.rs  terst.rs  tko_pssm.rs  transcrispr.rs
