[package]
name = "sequence_retriever"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
urlencoding = "2.1"
bio = "0.41.0"
log = "0.4.22"
url = "2.5.2"
form_urlencoded = "1.2.1"