[package]
name = "validator"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = { version = "0.46.0", features = [ "csv", "lazy","strings","semi_anti_join", "regex","dtype-array","polars-ops","abs", "round_series","polars-lazy"] }
polars-ops = "0.46.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
csv = "1.3.1"
bio-seq = "0.13.5"
serde_json = "1.0.133"

anyhow = "1.0.95"
plotters = "0.3.7"
plotters-svg = "0.3"
plotters-bitmap = "0.3"
plotters-backend = "0.3.7"
log = "0.4.22"
rand_isaac = "0.4.0"

ndarray = "0.15.6"
umap = "0.1.0"
ndarray-stats = "0.5.1"
ndarray-linalg = "0.17.0"
rand = "0.8.5"
